<resources>
    <string name="app_name">Converter</string>
    <string name="creator">KOLINKO</string>
    <string name="hint0">0</string>
    <string name="length">Length</string>
    <string name="weight">Weight</string>
    <string name="temperature">Temperature</string>
    <string name="currency">Currency</string>
    <string name="convert">Convert</string>
    <string name="clear">Clear</string>
    <string name="sign">(change sign)</string>
</resources>